--- a/Comp306GroupProject/Views/Shared/_Layout.cshtml
+++ b/Comp306GroupProject/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="job" asp-action="jobs">Find Job</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="jobseeker" asp-action="index">Find Job</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Post Job</a>
