--- a/Comp306GroupProject/Views/Job/Jobs.cshtml
+++ b/Comp306GroupProject/Views/Job/Jobs.cshtml
@@ -1,7 +1,4 @@
-﻿<h1> <-- Note -- Sample Job Page that display jobs a candidate can apply for</h1>
-<h1>Click on the Apply button to see job detail. Candidate can the apply for a job --></h1>
-
-<div class="job-post-company pt-120 pb-120">
+﻿<div class="job-post-company pt-120 pb-120">
     <div class="container">
         <div class="row justify-content-between">
             <!-- Left Content -->
