--- a/Comp306GroupProject/Views/Shared/_Layout.cshtml
+++ b/Comp306GroupProject/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
 
 </head>
 <body>
-    <header>
+    <header style="margin-bottom:25px">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <img style="margin-right: 20px" src="~/img/logo.png" alt="">
+                <a asp-controller="home" asp-action="index"><img style="margin-right: 20px" src="~/img/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,23 +41,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="jobseeker" asp-action="index">Find Job</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Find Job</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Post Job</a>
                         </li>
                     </ul>
 
-                   @* <div class="ml-auto" id="collapsibleNavbar">*@
-
                     <div class="ml-auto" id="collapsibleNavbar">
                         <ul class="navbar-nav ml-auto">
-                            @*If the user is signed-in display Logout link*@
-@*                            @if (SignInManager.IsSignedIn(User))
-                            {*@
+                            @if (SignInManager.IsSignedIn(User))
+                            {
                                 <li class="nav-item">
                                     <form method="post" asp-controller="account" asp-action="logout">
                                         <button type="submit" style="width:auto"
@@ -74,20 +68,20 @@
                                         </button>
                                     </form>
                                 </li>
-@*                            }
+                            }
                             else
-                            {*@
+                            {
                                 <li class="nav-item text-dark">
-                                    <a class="nav-link" asp-controller="account" asp-action="register">
+                                <a class="nav-link" asp-controller="account" asp-action="register">
                                         Register
                                     </a>
                                 </li>
                                 <li class="nav-item text-dark">
-                                    <a class="nav-link" asp-controller="account" asp-action="login">
+                                <a class="nav-link" asp-controller="account" asp-action="login">
                                         Login
                                     </a>
                                 </li>
-@*                            }*@
+                            }
                         </ul>
                     </div>
 
