Resolved Links conflict

--- a/Comp306GroupProject/Views/Shared/_Layout.cshtml
+++ b/Comp306GroupProject/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
                     <div class="ml-auto" id="collapsibleNavbar">
                         <ul class="navbar-nav ml-auto">
-                            @*If the user is signed-in display Logout link*@
+                            @*If the user is signed-in display Logout link - link not showing*@
 @*                            @if (SignInManager.IsSignedIn(User))
                             {*@
                                 <li class="nav-item">
